--- a/conda_environments/environment_assembly.yml
+++ b/conda_environments/environment_assembly.yml
@@ -1,165 +1,156 @@
 name: assembly
 channels:
+  - conda-forge
   - bioconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - blas=1.0
-  - blast=2.12.0
+  - _openmp_mutex=4.5
+  - _sysroot_linux-64_curr_repodata_hack=3
+  - blast=2.13.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - bzip2=1.0.8
   - c-ares=1.18.1
-  - ca-certificates=2022.07.19
-  - certifi=2021.5.30
+  - ca-certificates=2022.6.15
+  - certifi=2022.6.15
   - circos=0.69.8
-  - curl=7.84.0
+  - curl=7.83.1
   - cycler=0.11.0
-  - dbus=1.13.18
   - entrez-direct=16.2
-  - expat=2.4.4
-  - fastp=0.22.0
-  - fontconfig=2.13.1
-  - freetype=2.11.0
-  - glib=2.69.1
+  - expat=2.4.8
+  - fastp=0.23.2
+  - fastqc=0.11.9
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.0
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.34.4
+  - freetype=2.10.4
+  - giflib=5.2.1
   - glimmerhmm=3.0.4
-  - gst-plugins-base=1.14.0
-  - gstreamer=1.14.0
-  - icu=58.2
-  - intel-openmp=2022.0.1
-  - joblib=1.0.1
+  - icu=70.1
+  - isa-l=2.30.0
+  - joblib=1.1.0
   - jpeg=9e
-  - kiwisolver=1.3.1
-  - krb5=1.19.2
+  - k8=0.2.5
+  - kernel-headers_linux-64=3.10.0
+  - keyutils=1.6.1
+  - kiwisolver=1.4.4
+  - krb5=1.19.3
   - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - libcurl=7.84.0
-  - libedit=3.1.20210910
+  - ld_impl_linux-64=2.36.1
+  - lerc=3.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcurl=7.83.1
+  - libdeflate=1.10
+  - libedit=3.1.20191231
   - libev=4.33
   - libffi=3.3
-  - libgcc=7.2.0
-  - libgcc-ng=11.2.0
+  - libgcc-ng=12.1.0
   - libgd=2.3.3
-  - libgomp=11.2.0
-  - libidn2=2.3.2
-  - libnghttp2=1.46.0
+  - libgfortran-ng=12.1.0
+  - libgfortran5=12.1.0
+  - libgomp=12.1.0
+  - liblapack=3.9.0
+  - libnghttp2=1.47.0
+  - libnsl=2.0.0
+  - libopenblas=0.3.20
   - libpng=1.6.37
   - libssh2=1.10.0
-  - libstdcxx-ng=11.2.0
-  - libtiff=4.2.0
-  - libunistring=0.9.10
-  - libuuid=1.0.3
-  - libwebp-base=1.2.2
-  - libxcb=1.15
-  - libxml2=2.9.14
+  - libstdcxx-ng=12.1.0
+  - libtiff=4.4.0
+  - libuuid=2.32.1
+  - libwebp=1.2.3
+  - libwebp-base=1.2.3
+  - libxcb=1.13
+  - libzlib=1.2.12
+  - llvm-meta=7.0.0
   - lz4-c=1.9.3
-  - matplotlib=3.3.4
-  - matplotlib-base=3.3.4
-  - mkl=2020.2
-  - mkl-service=2.3.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.1.1
+  - matplotlib-base=3.5.2
+  - minimap2=2.24
+  - munkres=1.1.4
   - ncurses=6.3
-  - numpy=1.19.2
-  - numpy-base=1.19.2
-  - olefile=0.46
-  - openjdk=11.0.13
+  - numpy=1.23.1
+  - openjdk=11.0.1
   - openjpeg=2.4.0
+  - openmp=7.0.0
   - openssl=1.1.1q
+  - packaging=21.3
   - pcre=8.45
-  - perl=5.26.2
-  - perl-archive-tar=2.32
+  - perl=5.32.1
+  - perl-archive-tar=2.40
   - perl-autoloader=5.74
-  - perl-base=2.23
-  - perl-business-isbn=3.004
-  - perl-business-isbn-data=20140910.003
-  - perl-carp=1.38
+  - perl-carp=1.50
   - perl-clone=0.42
-  - perl-common-sense=3.74
-  - perl-compress-raw-bzip2=2.087
-  - perl-compress-raw-zlib=2.087
-  - perl-config-general=2.63
-  - perl-constant=1.33
-  - perl-data-dumper=2.173
-  - perl-digest-hmac=1.03
-  - perl-digest-md5=2.55
+  - perl-common-sense=3.75
+  - perl-compress-raw-bzip2=2.201
+  - perl-compress-raw-zlib=2.105
+  - perl-config-general=2.65
   - perl-digest-perl-md5=1.9
   - perl-dynaloader=1.25
-  - perl-encode=2.88
-  - perl-encode-locale=1.05
-  - perl-exporter=5.72
-  - perl-exporter-tiny=1.002001
-  - perl-extutils-makemaker=7.36
-  - perl-file-listing=6.04
+  - perl-encode=3.18
+  - perl-exporter=5.74
+  - perl-exporter-tiny=1.002002
+  - perl-extutils-makemaker=7.64
   - perl-font-ttf=1.06
-  - perl-gd=2.68
-  - perl-html-parser=3.72
-  - perl-html-tagset=3.20
-  - perl-http-cookies=6.04
-  - perl-http-daemon=6.01
-  - perl-http-date=6.02
-  - perl-http-message=6.18
-  - perl-http-negotiate=6.01
-  - perl-io-compress=2.087
-  - perl-io-html=1.001
-  - perl-io-socket-ssl=2.066
+  - perl-gd=2.76
+  - perl-io-compress=2.106
   - perl-io-string=1.08
-  - perl-io-zlib=1.10
-  - perl-json=4.02
+  - perl-io-zlib=1.11
+  - perl-json=4.07
   - perl-json-xs=2.34
-  - perl-libwww-perl=6.39
-  - perl-list-moreutils=0.428
-  - perl-list-moreutils-xs=0.428
-  - perl-lwp-mediatypes=6.04
+  - perl-list-moreutils=0.430
+  - perl-list-moreutils-xs=0.430
   - perl-math-bezier=0.01
   - perl-math-round=0.07
   - perl-math-vecstat=0.08
-  - perl-mime-base64=3.15
   - perl-module-implementation=0.09
   - perl-module-runtime=0.016
-  - perl-net-http=6.19
-  - perl-net-ssleay=1.88
-  - perl-ntlm=1.09
   - perl-number-format=1.75
-  - perl-params-validate=1.29
-  - perl-parent=0.236
+  - perl-params-validate=1.30
+  - perl-parent=0.238
   - perl-pathtools=3.75
   - perl-readonly=2.05
   - perl-regexp-common=2017060201
-  - perl-scalar-list-utils=1.52
+  - perl-scalar-list-utils=1.62
   - perl-set-intspan=1.19
   - perl-statistics-basic=1.6611
-  - perl-storable=3.15
-  - perl-svg=2.84
-  - perl-text-format=0.59
-  - perl-threaded=5.32.1
-  - perl-time-hires=1.9760
-  - perl-time-local=1.28
-  - perl-try-tiny=0.30
-  - perl-types-serialiser=1.0
-  - perl-uri=1.76
-  - perl-www-robotrules=6.02
-  - perl-xml-parser=2.44
-  - perl-xsloader=0.24
-  - pillow=8.3.1
-  - pip=21.2.2
-  - pyparsing=3.0.4
-  - pyqt=5.9.2
-  - python=3.6.13
+  - perl-svg=2.87
+  - perl-text-format=0.62
+  - perl-time-hires=1.9764
+  - perl-try-tiny=0.31
+  - perl-types-serialiser=1.01
+  - perl-xml-parser=2.44_01
+  - pillow=9.2.0
+  - pip=22.2.1
+  - pthread-stubs=0.4
+  - pyparsing=3.0.9
+  - python=3.9.0
   - python-dateutil=2.8.2
-  - qt=5.9.7
-  - quast=5.0.2
+  - python_abi=3.9
+  - quast=5.2.0
   - readline=8.1.2
-  - setuptools=58.0.4
-  - simplejson=3.8.1
-  - sip=4.19.8
+  - setuptools=63.2.0
+  - simplejson=3.17.6
   - six=1.16.0
-  - spades=3.13.1
-  - sqlite=3.38.5
+  - spades=3.15.5
+  - sqlite=3.39.2
+  - sysroot_linux-64=2.17
   - tk=8.6.12
-  - tornado=6.1
   - trimmomatic=0.39
-  - wget=1.21.3
+  - tzdata=2022a
+  - unicodedata2=14.0.0
   - wheel=0.37.1
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - zlib=1.2.12
   - zstd=1.5.2
